--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -49,3 +49,14 @@ jobs:
         run: ./contrib/scripts/codefmt.sh -v -s shell
       - name: Check yaml formatting
         run: ./contrib/scripts/codefmt.sh -v -s yaml
+
+  markdown-linting:
+    name: Markdown Linting
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
+        with:
+          fetch-depth: 0
+      - uses: DavidAnson/markdownlint-cli2-action@992badcdf24e3b8eb7e87ff9287fe931bcb00c6e
+        with:
+          globs: '**/*.md'
