GitHub CI: Pin all CI build dependencies to specific version tags
Pin all builds to the latest stable Linux distro image version tag,
for extra protection against supply chain attacks

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,7 +34,7 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 12
     container:
-      image: alpine:latest
+      image: alpine:3.22.1
     steps:
       - uses: actions/checkout@v4
       - name: Install dependencies
@@ -107,7 +107,7 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 12
     container:
-      image: archlinux:latest
+      image: archlinux:base-devel-20250824.0.410029
     steps:
       - uses: actions/checkout@v4
       - name: Install dependencies
@@ -164,7 +164,7 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 12
     container:
-      image: debian:latest
+      image: debian:13.0
     steps:
       - uses: actions/checkout@v4
       - name: Install dependencies
@@ -237,7 +237,7 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 12
     container:
-      image: fedora:latest
+      image: fedora:42
     steps:
       - uses: actions/checkout@v4
       - name: Install dependencies
