--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -60,3 +60,27 @@ jobs:
       - uses: DavidAnson/markdownlint-cli2-action@992badcdf24e3b8eb7e87ff9287fe931bcb00c6e
         with:
           globs: '**/*.md'
+
+  distribution-tests:
+    name: Distribution Tests
+    runs-on: ubuntu-latest
+    timeout-minutes: 12
+    steps:
+      - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
+      - name: Install dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install --assume-yes --no-install-recommends \
+            libevent-dev \
+            libgcrypt20-dev \
+            libiniparser-dev \
+            meson \
+            ninja-build
+      - name: Configure
+        run: |
+          meson setup build \
+            -Dbuildtype=release \
+            -Dwith-init-hooks=false \
+            -Dwith-tests=true
+      - name: Run distribution tests
+        run: meson dist -C build
