Fix copy paste mistake in afpstats D-Bus config file

--- a/config/netatalk-dbus.conf
+++ b/config/netatalk-dbus.conf
@@ -8,7 +8,7 @@
     <allow own="org.netatalk.AFPStats"/>
   </policy>
 
-  <!-- Allow anyone to invoke methods on time-sliderd -->
+  <!-- Allow anyone to invoke methods on the AFP stats service -->
   <policy context="default">
     <allow send_destination="org.netatalk.AFPStats"/>
     <allow receive_sender="org.netatalk.AFPStats"/>
