testsuite: create testhelper module for housing pure test functions

--- a/test/testsuite/meson.build
+++ b/test/testsuite/meson.build
@@ -11,6 +11,7 @@ libafptest_sources = [
     'afpcli.c',
     'afpcmd.c',
     'afphelper.c',
+    'testhelper.c',
 ]
 
 libafptest = static_library(
