GitHub CI: remove redundant sqlite dependency on macOS build
In the macOS runner's Homebrew environment there's already a sqlite library available so we keep getting a warning in every actions run

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -401,8 +401,7 @@ jobs:
             iniparser \
             mariadb \
             meson \
-            openldap \
-            sqlite
+            openldap
       - name: Configure
         run: |
           meson setup build \
