GitHub CI: run brew upgrade in macOS job to avoid intermittent fail state

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -394,6 +394,7 @@ jobs:
       - name: Install dependencies
         run: |
           brew update
+          brew upgrade
           brew install \
             bstring \
             cmark-gfm \
