testsuite: refactor headers and declarations for internal consistency
Symbol declarations and macros have been organized into headers
which matches a module in the libafptest library

afpclient.h - AFP client implementation
afpcmd.h - AFP command wrapper functions
afphelper.h - test supporting utility functions using AFP commands
testhelper.h - pure test runner control functions, macros, and data structures

The meta header "specs.h" has been removed

--- a/test/testsuite/meson.build
+++ b/test/testsuite/meson.build
@@ -8,7 +8,7 @@ endif
 
 libafptest_sources = [
     'adoublehelper.c',
-    'afpcli.c',
+    'afpclient.c',
     'afpcmd.c',
     'afphelper.c',
     'testhelper.c',
