meson: error out if no writable CNID backend selected for compilation, GitHub #2449
Since the last backend is read-only, we want to error out rather than
automatically selecting it as the default CNID backend in the absence
of any other backend

You can still force the last backend as default with -Dwith-cnid-default-backend
if you absolutely want to (but I cannot see when this would be useful)

This effectively introduces a hard build dependency on at least one of
the three database libraries: bdb, mysql, or sqlite

--- a/meson.build
+++ b/meson.build
@@ -623,7 +623,9 @@ if default_backend == ''
     elif use_mysql_backend
         default_backend = 'mysql'
     elif use_last_backend
-        default_backend = 'last'
+        error(
+            'No writable CNID backend selected for compilation; need at least one of dbd, sqlite or mysql',
+        )
     else
         error('No CNID backends selected for compilation')
     endif
