docs: create a chapter in the developer docs for DDP / AppleTalk
The new chapter is made up of content from the AppleTalk section
in the html manual, the APPLETALK.md readme, and the AppleTalk Kernel Module
wiki article

At the same time, some contents have moved from the readme into
the wiki article

The new structure is as follows:
- Internal configuration concerning netatalk and atalkd is in the manual
- Architectural design and code references are in the developer docs
- OS specific capability and configuration details are in the wiki

--- a/doc/Doxyfile.in
+++ b/doc/Doxyfile.in
@@ -1031,7 +1031,7 @@ INPUT_FILE_ENCODING    =
 # provided as Doxygen C comment), *.py, *.pyw, *.f90, *.f95, *.f03, *.f08,
 # *.f18, *.f, *.for, *.vhd, *.vhdl, *.ucf, *.qsf and *.ice.
 
-FILE_PATTERNS          = */DEVELOPER.md *.c *.h
+FILE_PATTERNS          = */developer/*.md *.c *.h
 
 # The RECURSIVE tag can be used to specify whether or not subdirectories should
 # be searched for input files as well.
@@ -1157,7 +1157,7 @@ FILTER_SOURCE_PATTERNS =
 # (index.html). This can be useful if you have a project on for instance GitHub
 # and want to reuse the introduction page also for the Doxygen output.
 
-USE_MDFILE_AS_MAINPAGE = DEVELOPER.md
+USE_MDFILE_AS_MAINPAGE = developer/developer.md
 
 # If the IMPLICIT_DIR_DOCS tag is set to YES, any README.md file found in sub-
 # directories of the project's root, is used as the documentation for that sub-
