docker: restructure containerization support files into distrib/docker
Consolidating all files that have to do with Docker into a single subdir,
for discoverability and maintainability

The drawback is that that you have do specify the file that docker build
and docker compose should read, ex:

% docker build -t netatalk:latest -f distrib/docker/netatalk.Dockerfile .

% docker compose -f distrib/docker/docker-compose.yml up

--- a/.github/workflows/containers.yml
+++ b/.github/workflows/containers.yml
@@ -57,7 +57,7 @@ jobs:
         uses: docker/build-push-action@263435318d21b8e681c14492fe198d362a7d2c83 # v6.18.0
         with:
           context: .
-          file: Dockerfile
+          file: distrib/docker/netatalk.Dockerfile
           push: true
           labels: ${{ steps.metadata.outputs.labels }}
           tags: ${{ steps.metadata.outputs.tags }}
@@ -92,7 +92,7 @@ jobs:
         uses: docker/build-push-action@263435318d21b8e681c14492fe198d362a7d2c83 # v6.18.0
         with:
           context: .
-          file: testsuite_alp.Dockerfile
+          file: distrib/docker/testsuite_alp.Dockerfile
           push: true
           labels: ${{ steps.metadata.outputs.labels }}
           tags: ${{ steps.metadata.outputs.tags }}
@@ -127,7 +127,7 @@ jobs:
         uses: docker/build-push-action@263435318d21b8e681c14492fe198d362a7d2c83 # v6.18.0
         with:
           context: .
-          file: webmin_module.Dockerfile
+          file: distrib/docker/webmin_module.Dockerfile
           push: true
           labels: ${{ steps.metadata.outputs.labels }}
           tags: ${{ steps.metadata.outputs.tags }}
@@ -162,7 +162,7 @@ jobs:
         uses: docker/build-push-action@263435318d21b8e681c14492fe198d362a7d2c83 # v6.18.0
         with:
           context: .
-          file: testsuite_deb.Dockerfile
+          file: distrib/docker/testsuite_deb.Dockerfile
           push: true
           labels: ${{ steps.metadata.outputs.labels }}
           tags: ${{ steps.metadata.outputs.tags }}
