macipgw: MacIP tunnel platform code chosen by build system
Rather than depending on preprocessor macros to check for
Linux or *BSD, use the mson build scripts to the same effect

Among other things, this enables doxygen code documentation
of both tunnel modules to be generated at once

--- a/contrib/macipgw/meson.build
+++ b/contrib/macipgw/meson.build
@@ -9,10 +9,14 @@ macipgw_sources = [
     'macip.c',
     'main.c',
     'nbp_lkup_async.c',
-    'tunnel_bsd.c',
-    'tunnel_linux.c',
     'util.c',
 ]
+
+if host_os == 'linux'
+    macipgw_sources += 'tunnel_linux.c'
+else
+    macipgw_sources += 'tunnel_bsd.c'
+endif
 
 macipgw_includes = include_directories('../../libatalk/atp')
 
