Specify SCM provider for SonarQube scanner
The SonarQube Cloud SCM autodetection is failing, so let's explicitly set it to git

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,10 +3,9 @@ sonar.projectKey=Netatalk_netatalk
 sonar.organization=netatalk
 sonar.sources=.
 sonar.sourceEncoding=UTF-8
-
-# This is the project name and version displayed in the SonarQube Cloud UI
 sonar.projectName=netatalk
 sonar.projectVersion=4.4
+sonar.scm.provider=git
 
 # Don't analyze dynamically generated files
 sonar.exclusions=**/build/**,**/subprojects/**,etc/spotlight/sparql_parser.*,etc/spotlight/spotlight_rawquery_lexer.c,include/atalk/afp_dtrace.h
