Issue #2524: Cache Validation Fixes, Security Enhancements, and Comprehensive Test Coverage
This commit addresses critical cache validation issues in the directory cache
(dircache) subsystem, adds security enhancements for multi-protocol environments,
and significantly expands test coverage.

Stale directory cache entries caused:
- Crashes (test183: use-after-free during renames)
- Silent failures (test103: FPMoveAndRename succeeded but filesystem rename didn't execute)
- Wrong-file operations (test235: external file replacement returned wrong CNID)

1. **New dirlookup_strict() Function (directory.c:776)**
   - Deterministic validation for all mutation operations
   - Performs stat() + inode comparison to detect renamed/moved directories
   - Cleans stale cache and retries via CNID on mismatch
   - Used by: afp_delete(), afp_setdirparams(), afp_setfilparams(), afp_setacl(),
     afp_copyfile() (dest), afp_exchangefiles() (both parents)
   - Exported via directory.h for reuse

2. **Enhanced movecwd() Self-Healing (directory.c:1472-1511)**
   - On ENOENT, cleans stale cache and retries via dirlookup_strict()
   - Updates global curdir to healed directory
   - All path resolution transparently benefits from healing

3. **moveandrename() Source Validation (filedir.c:338-383)**
   - Validates oldunixname via fstatat() before unix_rename()
   - Self-heals via CNID if source path is stale
   - Fixes test103: rename now executes on filesystem
   - Works for both files and directories

4. **Preventive Cache Invalidation (file.c:1326-1342, directory.c)**
   - Clean cache entries BEFORE filesystem rename (not after)
   - Eliminates timing window that caused test183 crash
   - Matches for both renamefile() and renamedir()

**check_acl_access() Ctime Validation (acls.c:1590-1603, 1662-1667)**
- Three-condition cache validation: directory + valid + ctime match
- Detects external permission changes (chmod/chown/setfacl via shell/SMB/NFS)
- Forces recalculation when filesystem ctim

--- a/test/testsuite/meson.build
+++ b/test/testsuite/meson.build
@@ -110,6 +110,7 @@ spectest_sources = [
     'FPFlush.c',
     'FPFlushFork.c',
     'FPGetACL.c',
+    'FPSetACL.c',
     'FPGetAPPL.c',
     'FPGetComment.c',
     'FPGetExtAttr.c',
@@ -152,6 +153,7 @@ spectest_sources = [
     'T2_FPDelete.c',
     'T2_FPGetFileDirParms.c',
     'T2_FPGetSrvrParms.c',
+    'T2_FPGetVolParms.c',
     'T2_FPMoveAndRename.c',
     'T2_FPOpenFork.c',
     'T2_FPRead.c',
