use explicit_bzero to clear out sensitive data from memory
the use of memset to zero out variables is at risk of being optimized away by compilers,
in particular if the variable isn't used afterwards

in order not to leave sensitive data (passwords etc.) lingering in memory,
let's use libgcrypt's explicit_bzero function instead

since explicit_bzero is not entirely portable, we introduce a wrapper
function in the compat module of libatalk

but before using the wrapper function, we check for C23's memset_explicit
and use that as the preferred fallback

--- a/meson.build
+++ b/meson.build
@@ -277,7 +277,9 @@ check_functions = [
     'asprintf',
     'backtrace_symbols',
     'dirfd',
+    'explicit_bzero',
     'getpwnam_shadow',
+    'memset_explicit',
     'pread',
     'pselect',
     'pwrite',
