meson: install readmes into manual subdir for website publishing
Fixing a regression bug introduced when refactoring the docs installation path

--- a/meson.build
+++ b/meson.build
@@ -2324,7 +2324,7 @@ if 'readmes' in get_option('with-docs')
                 )
             endif
 
-            install_data(file + '.md', install_dir: docs_install_path)
+            install_data(file + '.md', install_dir: docs_install_path / 'manual')
         else
             if pandoc.found()
                 custom_target(
