tests: refactor the afpd tests to use the sqlite CNID backend
using the sqlite backend instead of the last backend in the afpd tests
allows us to continuously test actual production code
rather than the half-finished last backend

unlike dbd or mysql, the sqlite backend can function without root privileges
which makes it ideal for automated tests

a handful of minor bugfixes and improvements to the tests:

- fixed a bug in the test helper where the network byte order was flipped
- ignore SIGPIPE to keep the test runner alive when writing to IPC pipe
- proper cleanup of data structures when exiting the tests (Valgrind flagged)
- create unique shared volume and CNID dirs every time
- set server signature, vol UUID, and vol dbpath to make test setup atomic
- capture afpd logs at debug level in the test log

--- a/meson_options.txt
+++ b/meson_options.txt
@@ -193,7 +193,7 @@ option(
     'with-tests',
     type: 'boolean',
     value: false,
-    description: 'Compile tests',
+    description: 'Compile the afpd integration tests',
 )
 option(
     'with-testsuite',
