cnid: remove the obsolete 'last' CNID backend
since the afpd integration tests now use the sqlite CNID backend,
there is no realistic use case left for this backend anymore

it is only a partial implementation of the CNID requirements,
and has no ID persistence between sessions which mostly defeats
the purpose of CNID in the first place

we also remove all related compiler flags and documentation

--- a/meson_options.txt
+++ b/meson_options.txt
@@ -377,11 +377,10 @@ option(
     type: 'array',
     choices: [
         'dbd',
-        'last',
         'mysql',
         'sqlite',
     ],
-    value: ['dbd', 'last', 'mysql', 'sqlite'],
+    value: ['dbd', 'mysql', 'sqlite'],
     description: 'Choose the CNID backends to build and install',
 )
 option(
@@ -390,7 +389,6 @@ option(
     choices: [
         '',
         'dbd',
-        'last',
         'mysql',
         'sqlite',
     ],
