GitHub CI: run the afpd tests on OpenBSD
after moving to sqlite as the backend for the afpd tests, they no longer crash on OpenBSD

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -680,6 +680,7 @@ jobs:
               -Dwith-tests=true \
               -Dwith-testsuite=true
             meson compile -C build
+            meson test -C build
             meson install -C build
             netatalk -V
             afpd -V
